cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

author:             heitor
maintainer:         heitor@blubaron.local

extra-source-files: CHANGELOG.md

executable aoc2021
    main-is:          Main.hs
    other-modules:    Day1, Day2, Day3, Day4, Day5, Day6, Day7
    build-depends:    base, containers, dequeue
    hs-source-dirs:   app
    default-language: Haskell2010
